LTE support and Mobile Network Setting
 1. Fix the pppd dial issue to enable LTE.
 2. Fix the 4G signal display issue.
 3. Enable Mobile Network Setting in TvSettings.apk and Settings.apk.
 4. Update the ril module Makefile.

--- a/android/packages/apps/Settings/res/values/strings.xml
+++ b/android/packages/apps/Settings/res/values/strings.xml
@@ -1803,7 +1803,8 @@
     <!-- Sound & display settings screen, setting option summary displaying the currently selected font size -->
     <string name="summary_font_size" translatable="false">%1$s</string>
     <!-- [CHAR LIMIT=40] Sound & display settings screen, title of dialog for picking font size -->
-    <string name="dialog_title_font_size">Font size</string> 
+    <string name="dialog_title_font_size">Font size</string>
+
     <!-- SIM lock settings title -->
     <string name="sim_lock_settings">SIM card lock settings</string>
     <!-- Security & location settings screen, setting option name -->
@@ -1867,7 +1868,7 @@
     <!-- About phone screen, fcc equipment id label-->
     <string name="fcc_equipment_id">Equipment ID</string>
     <!-- About phone screen,  setting option name-->
-    <string name="baseband_version">Firmware version</string>
+    <string name="baseband_version">Baseband version</string>
     <!-- About phone screen,  setting option name-->
     <string name="kernel_version">Kernel version</string>
     <!-- About phone screen,  setting option name-->
