--- a/android/device/softwinner/common/packages/TvdSettings/res/values/strings.xml
+++ b/android/device/softwinner/common/packages/TvdSettings/res/values/strings.xml
@@ -1864,7 +1864,7 @@
     <!-- About phone screen, fcc equipment id label-->
     <string name="fcc_equipment_id">Equipment ID</string>
     <!-- About phone screen,  setting option name-->
-    <string name="baseband_version">Firmware version</string>
+    <string name="baseband_version">Baseband version</string>
     <!-- About phone screen,  setting option name-->
     <string name="kernel_version">Kernel version</string>
     <!-- About phone screen,  setting option name-->
