--- a/android/packages/apps/Settings/res/values-zh-rCN/strings.xml
+++ b/android/packages/apps/Settings/res/values-zh-rCN/strings.xml
@@ -732,7 +732,7 @@
     <string name="screensaver_settings_button" msgid="7292214707625717013">"设置"</string>
     <string name="automatic_brightness" msgid="5014143533884135461">"自动调整亮度"</string>
     <string name="title_font_size" msgid="4405544325522105222">"字体大小"</string>
-    <string name="dialog_title_font_size" msgid="2231507851258955038">"字体大小"</string>       
+    <string name="dialog_title_font_size" msgid="2231507851258955038">"字体大小"</string>
     <string name="sim_lock_settings" msgid="3392331196873564292">"SIM 卡锁定设置"</string>
     <string name="sim_lock_settings_category" msgid="5136244267576697004">"设置 SIM 卡锁定"</string>
     <string name="sim_lock_settings_title" msgid="9018585580955414596">"SIM 卡锁定"</string>
@@ -763,7 +763,7 @@
     <string name="firmware_version" msgid="4801135784886859972">"Android 版本"</string>
     <string name="model_number" msgid="3765737700545384794">"型号"</string>
     <string name="fcc_equipment_id" msgid="149114368246356737">"设备 ID"</string>
-    <string name="baseband_version" msgid="1848990160763524801">"固件版本"</string>
+    <string name="baseband_version" msgid="1848990160763524801">"基带版本"</string>
     <string name="kernel_version" msgid="9192574954196167602">"内核版本"</string>
     <string name="build_number" msgid="3075795840572241758">"版本号"</string>
     <string name="selinux_status" msgid="6212165375172061672">"SELinux 状态"</string>
@@ -1500,7 +1500,7 @@
     <string name="privacy_settings" msgid="5446972770562918934">"备份和重置"</string>
     <string name="privacy_settings_title" msgid="4856282165773594890">"备份和重置"</string>
     <string name="backup_section_title" msgid="7952232291452882740">"备份和还原"</string>
-    <string name="personal_data_section_title" msgid="7815209034443782061">"个人数据"</string> 
+    <string name="personal_data_section_title" msgid="7815209034443782061">"个人数据"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"备份我的数据"</string>
     <string name="backup_data_summary" msgid="9157861529438245957">"将应用数据、Wi-Fi 密码和其他设置备份到 Google 服务器"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"备份帐户"</string>
